# grille-inspection-abmed

./: .gitignore  KOD-4-plan.md  KOD-4-specs.md  KOD-4-summary.md  chartjs-fix-solution.md  daily-summary.md
.github/workflows/: coverage.yml  security.yml
inspection-officine/: BACKUP_PROCEDURE.md  README.md  SECURITY-NOTES.md  inspections-pharma.desktop  launch.sh  package-lock.json
inspection-officine/src/: index-old.html  index-v1.html  index-v2.html  index-v3.html  index.html  test-tauri.html
inspection-officine/src-tauri/: Cargo.toml  lcov.info  tauri.conf.json
inspection-officine/src-tauri/src/: analytics.rs  audit_db.rs  cloud_sync.rs  db.rs  grid_diff.rs  grids_db.rs  main.rs  migration.rs  offline_mode.rs  pdf_report.rs  storage.rs  users.rs
inspection-officine/src-tauri/src/grids/: clinique.rs  hopital.rs  mod.rs
inspection-officine/src/css/: admin.css  analytics.css  components.css  layout.css  report.css  responsive.css  variables.css
inspection-officine/src/js/: admin-grids.js  admin-users.js  analytics.js  api.js  app.js  audit.js  auth.js  backup.js  benin-data.js  benin-map.js  cloud-sync-ui.js  dashboard.js  establishments-data.js  grid-selector.js  grids-data.js  grille-visualization.js  inspection-types.js  inspection.js  inspectors-data.js  offline-mode.js  pdf-export.js  planning.js  report.js  responses.js  risk-engine.js  state.js  toast.js  utils.js
