[package]
name = "inspection-officine"
version = "1.0.0"
description = "Application d'inspection officine pharmaceutique - ABMed"
authors = ["ABMed"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2.0"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
printpdf = "0.7"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
